gitops/platform/layers/networking/resources/network-policies/argocd.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: platform-ingress
  namespace: argocd
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: argocd
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
