gitops/platform/layers/networking/resources/network-policies/minio.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: platform-ingress
  namespace: minio
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: minio
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "9000"
            - port: "9001"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "9000"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: velero
      toPorts:
        - ports:
            - port: "9000"
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: atlasteam-seal
      toPorts:
        - ports:
            - port: "9000"
