gitops/platform/layers/networking/resources/network-policies/nginx-gateway.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: platform-ingress
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cilium-agent
  ingress:
    - fromEntities:
        - remote-node
        - world
